# trishool-subnet

./: .env.example  .env.sample  .gitignore  README.md  pyproject.toml  repo-auto-updater.config.sample.js  requirements.txt  validator.config.sample.js
alignet/: __init__.py
alignet/base/: neuron.py  validator.py
alignet/base/utils/: weight_utils.py
alignet/cli/: README.md  __init__.py  bts_signature.py  miner.py  requirements.txt  seed_prompt.txt
alignet/models/: __init__.py  agent.py  evaluator_output.py  submission.py  target_interface.py
alignet/utils/: config.py  logging.py  telegram.py
alignet/validator/: __init__.py  base_commit_checker.py  constants.py  petri_commit_checker.py  platform_api_client.py  repo_auto_updater.py  repo_commit_checker.py  requirements.txt
alignet/validator/sandbox/: constants.py  enums.py  sandbox.py  sandbox_management.py
alignet/validator/sandbox/petri/: Dockerfile  run.sh
neurons/: validator.py
tests/: README.md  config.json  test_github_api.py  test_platform.py  test_sanbox.py  test_upload_log.py  test_validator_without_platfrom.py
