[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignet-subnet"
version = "0.0.0"
description = "Placeholder configuration for the Alignet Subnet monorepo."
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["alignet*"]
